Ui fix for scrollbar and planner

--- a/component/module/Planner/PlanDiscovery.module.scss
+++ b/component/module/Planner/PlanDiscovery.module.scss
@@ -94,4 +94,20 @@
   border-bottom-right-radius: 9px;
   height: 100rem;
   overflow: auto;
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+  }
+  &::-webkit-scrollbar {
+    width: 5px;
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #ddd;
+  }
 }
