--- a/component/module/Planner/Queue.module.scss
+++ b/component/module/Planner/Queue.module.scss
@@ -1,4 +1,5 @@
 @import "../../../styles/mixins";
+@import "../../../styles/variables";
 
 .plannerIcon {
   position: relative;
@@ -93,10 +94,65 @@
   border-bottom-right-radius: 9px;
   overflow: auto;
   scroll-padding-bottom: 50px;
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+  }
+  &::-webkit-scrollbar {
+    width: 5px;
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #ddd;
+  }
   &--discover {
     height: 88.9rem;
   }
   &--queue {
     height: 94.9rem;
+  }
+}
+
+.daypicker {
+  &__field {
+    height: 2.5rem;
+    width: 2.5rem;
+    background-color: $primaryColor;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    position: relative;
+    z-index: 2;
+    color: #fff;
+  }
+  &__options {
+    // visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    position: absolute;
+    top: 50%;
+    z-index: 1;
+    padding: 1.5rem 0 0rem;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 5px 0px;
+    border-radius: 5px;
+    & > li {
+      margin: 0;
+      width: 2.5rem;
+      display: flex;
+      justify-content: center;
+      padding: 5px;
+      font-size: 14px;
+      cursor: pointer;
+      &:hover {
+        background-color: #f1f1f1;
+      }
+    }
   }
 }
